<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/loginerror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#981b1e"
        android:visibility="gone" />

    <EditText
        android:id="@+id/loginemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:gravity="left"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/loginpass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:gravity="left"
        android:hint="@string/login_pass"
        android:inputType="textPassword"
        android:singleLine="true" />

    <!-- <TextView -->
    <!-- android:id="@+id/submit" -->
    <!-- android:layout_width="90dp" -->
    <!-- android:layout_height="45dp" -->
    <!-- android:background="@drawable/bordered_rectangle" -->
    <!-- android:gravity="center" -->
    <!-- android:clickable="true" -->
    <!-- android:onClick="Login" -->
    <!-- android:padding="10sp" -->
    <!-- android:text="@string/login_submit" /> -->

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2sp"
        android:onClick="Login"
        android:text="@string/login_submit" />

</LinearLayout>